# wagtail-draftail-plugins

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py  tox.ini
src/wagtail_draftail_plugins/: wagtail_hooks.py
src/wagtail_draftail_plugins/locale/es/LC_MESSAGES/: django.po
wagtail_draftail_plugins/: wagtail_hooks.py
wagtail_draftail_plugins/locale/es/LC_MESSAGES/: django.po
