[build-system]
requires = [ "poetry-core>=2.0.1",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wagtail-draftail-plugins"
version = "0.3.1"
description = "Commonly used extensions to Wagtail's Draftail editor."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/wagtail-draftail-plugins"
repository = "https://gitlab.com/thelabnyc/wagtail-draftail-plugins"
license = "ISC"

[[tool.poetry.packages]]
include = "wagtail_draftail_plugins"
from = "src"

[tool.poetry.dependencies]
python = "^3.10"
wagtail = ">=5.2.6"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.1.1"
tox = ">=4.24.1"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]
