[build-system]
requires = [ "poetry-core>=2.1.2",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "wagtail-draftail-plugins"
version = "0.3.1"
description = "Commonly used extensions to Wagtail's Draftail editor."
authors = ["thelab <thelabdev@thelab.co>"]
readme = "README.rst"
homepage = "https://gitlab.com/thelabnyc/wagtail-draftail-plugins"
repository = "https://gitlab.com/thelabnyc/wagtail-draftail-plugins"
license = "ISC"

[[tool.poetry.packages]]
include = "wagtail_draftail_plugins"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = ">=6.3"

[tool.poetry.group.dev.dependencies]
flake8 = ">=7.2.0"
tox = ">=4.25.0"
mypy = "^1.15.0"
django-stubs = "^5.1.3"

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "poetry"
version_scheme = "pep440"
version_files = [
    "pyproject.toml:version",
]
pre_bump_hooks = [
    "pre-commit run --all-files || true",
]
post_bump_hooks = [
    "git push origin master $CZ_POST_CURRENT_TAG_VERSION"
]

[tool.mypy]
python_version = "3.10"

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "wagtail.*"
follow_untyped_imports = true
