[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagtail-draftail-plugins"
version = "0.4.0"
description = "Commonly used extensions to Wagtail's Draftail editor."
readme = "README.rst"
dependencies = ["wagtail (>=7.0)"]
requires-python = ">=3.11"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/wagtail-draftail-plugins"
Repository = "https://gitlab.com/thelabnyc/wagtail-draftail-plugins"

[dependency-groups]
dev = [
    "ruff (>=0.13.0)",
    "tox>=4.30.2",
    "mypy (>=1.18.1,<2)",
    "django-stubs (>=5.2.2,<6)",
    "tox-uv>=1.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wagtail_draftail_plugins"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]

[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.ruff]
line-length = 160

[tool.ruff.lint]

[tool.mypy]
python_version = "3.11"

# Strict mode, see mypy --help
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
# disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
show_error_codes = true
# Not turned on by strict
strict_equality = true

[[tool.mypy.overrides]]
module = "wagtail.*"
follow_untyped_imports = true
